<resources>
    <string name="app_name">Orange Pro</string>

    <string name="recuperer_code_puk_share">Code PUK : %1$s</string>
    <string name="text_share">Partager</string>

    <string name="welcome">Bienvenue</string>
    <string name="french">Français</string>
    <string name="arabic">العربية</string>
    <string name="visitor_mode">Mode Visiteur</string>
    <string name="authentication">Identifiez-vous</string>
    <string name="sign_up">Créer un compte</string>
    <string name="id_hint">Identifiant ( RC / Patente )</string>
    <string name="password_hint">Mot de passe</string>
    <string name="stay_connected">Rester connecté</string>
    <string name="connect_btn">Me connecter</string>
    <string name="forgotten_password">Mot de passe oublié</string>
    <string name="change_account_manager">Changer mon gestionnaire de compte</string>
    <string name="no_internet">Aucune connexion internet détectée. Veuillez vérifier vos paramètres de connexion puis réessayer.</string>
    <string name="generic_error">Une erreur est survenue!</string>
    <string name="update_dialog_title">Mise à jour</string>
    <string name="ok_btn_hint">OK</string>
    <string name="cancel_btn_label">Annuler</string>
    <string name="signin">Inscrivez-vous</string>
    <string name="login_btn">Déjà inscrit</string>
    <string name="cin_passeport_hint">CIN ou Passeport</string>
    <string name="phone_hint">N°de tél - Optionnel</string>
    <string name="email_hint">Adresse e-mail-optionnel</string>
    <string name="security_level">Niveau de sécurité</string>
    <string name="cgu_btn">J\'ai lu et j\'accepte les <u><b>CGU</b></u></string>
    <string name="sign_btn">M\'inscrire</string>
    <string name="security_level_description">Votre mot de passe doit comporter 8 caractères minimum</string>
    <string name="cancel_update_btn">Plus tard</string>
    <string name="email_error">Merci de saisir une adresse mail valide</string>
    <string name="complete_profile_later_btn">Me le rappeler plus tard</string>
    <string name="Complete_profile">Compléter mon profile</string>
    <string name="complete_profile_description">Renseignez dès à présent vos infos personnelles pour profiter pleinement des avantages Orange pro.</string>
    <string name="complete_profile_title">Bienvenue sur Orange pro</string>
    <string name="yes">Oui</string>
    <string name="no">Non</string>
    <string name="account_manger_btn">Changer mon gestionnaire de compte</string>
    <string name="billing_btn">Payer mes factures</string>
    <string name="strong_password_security">Sécurité : Fort</string>
    <string name="medium_password_security">Sécurité : Moyen</string>
    <string name="weak_password_security">Sécurité : Faible</string>
    <string name="agree_btn">J\'accepte</string>
    <string name="cgu_title">CGU</string>
    <string name="language_dialog_title">Langue</string>
    <string name="apply_btn">Appliquer</string>
    <string name="next_btn">Passer</string>
    <string name="settings_title">Paramètres</string>
    <string name="logout_dialog_title">Confirmation</string>
    <string name="logout_dialog_messsage">Voulez-vous vraiment vous déconnecter\nde l\'application ?</string>
    <string name="confirm">Confirmer</string>

</resources>
