<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".views.authentication.fragments.SigninFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="240dp"
            android:layout_height="180dp"
            android:layout_alignParentEnd="true"
            android:scaleType="fitStart"
            android:src="@drawable/masques_inscription" />

        <LinearLayout
            android:id="@+id/credentials_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="10dp"
            android:paddingVertical="20dp">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/helveticabold"
                android:text="@string/signin"
                android:textColor="@color/black"
                android:textSize="30sp" />

            <Button
                android:id="@+id/sign_up_btn"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_gravity="end"
                android:layout_marginTop="20dp"
                android:background="@drawable/selector_black_btn_background"
                android:fontFamily="@font/helveticamedium"
                android:paddingHorizontal="20dp"
                android:text="@string/login_btn"
                android:textAllCaps="false"
                android:textColor="@drawable/selector_black_btn_text_color"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:backgroundTint="@color/grey"
                android:fontFamily="@font/helveticalight"
                android:hint="@string/id_hint_1"
                android:inputType="text"
                android:textColor="@color/black"
                android:textColorHint="@color/grey"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/cin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:backgroundTint="@color/grey"
                android:fontFamily="@font/helveticalight"
                android:hint="@string/cin_passeport_hint"
                android:inputType="text"
                android:textColor="@color/black"
                android:textColorHint="@color/grey"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:backgroundTint="@color/grey"
                android:fontFamily="@font/helveticalight"
                android:hint="@string/phone_hint"
                android:inputType="phone"
                android:textColor="@color/black"
                android:textColorHint="@color/grey"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:backgroundTint="@color/grey"
                android:fontFamily="@font/helveticalight"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:textColorHint="@color/grey"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:backgroundTint="@color/grey"
                android:fontFamily="@font/helveticalight"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHint="@color/grey"
                android:textSize="16sp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal"
                android:paddingStart="5dp">

                <TextView
                    android:id="@+id/security_level_label"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/helveticalight"
                    android:text="@string/security_level"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="italic"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_percent="0.5" />

                <View
                    android:id="@+id/security_level"
                    android:layout_width="0dp"
                    android:layout_height="2dp"
                    android:layout_marginEnd="20dp"
                    android:background="@color/grey_light"
                    app:layout_constraintBottom_toBottomOf="@id/security_level_label"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/security_level_label"
                    app:layout_constraintWidth_percent="0.4" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/helveticalight"
                    android:text="@string/security_level_description"
                    android:textColor="@color/grey"
                    android:textSize="10sp"
                    app:layout_constraintEnd_toEndOf="@id/security_level"
                    app:layout_constraintStart_toStartOf="@+id/security_level"
                    app:layout_constraintTop_toBottomOf="@id/security_level"
                    tools:ignore="SmallSp" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/cgu_check"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:background="@drawable/selector_custom_checkbox"
                    android:button="@null"
                    android:buttonTint="@color/grey"
                    android:checked="false"
                    android:fontFamily="@font/helveticamedium" />

                <TextView
                    android:id="@+id/cgu_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/helveticalight"
                    android:text="@string/cgu_btn"
                    android:textColor="@color/black"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/valid_btn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="10dp"
            android:background="@drawable/selector_orange_btn_background"
            android:enabled="false"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/helveticamedium"
            android:text="@string/sign_btn"
            android:textAllCaps="false"
            android:textColor="@drawable/selector_text_color"
            android:textSize="17sp" />

    </RelativeLayout>
</ScrollView>
