<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#AA000000">

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/white"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.55"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.8">

        <ImageView
            android:id="@+id/background1"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:scaleType="fitStart"
            android:src="@drawable/popup_up" />

        <ImageView
            android:id="@+id/background2"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:scaleType="fitEnd"
            android:src="@drawable/popup_down" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="60dp"
            android:fontFamily="@font/helveticabold"
            android:text="@string/logout_dialog_title"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="40dp"
            android:text="@string/logout_dialog_messsage"/>

        <Button
            android:id="@+id/confirm_btn"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="60dp"
            android:layout_above="@id/cancel_btn"
            android:background="@drawable/selector_orange_btn_background"
            android:fontFamily="@font/helveticamedium"
            android:text="@string/confirm"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp" />
        <Button
            android:id="@+id/cancel_btn"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_alignParentBottom="true"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/black_border_white_background"
            android:fontFamily="@font/helveticamedium"
            android:text="@string/cancel_btn_label"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="18sp" />

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
