<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".views.selectlanguage.SelectLanguageActivity">

    <ImageView
        android:layout_width="240dp"
        android:layout_height="180dp"
        android:layout_alignParentEnd="true"
        android:scaleType="fitStart"
        android:src="@drawable/mosi" />

    <ImageView
        android:layout_width="240dp"
        android:layout_height="180dp"
        android:layout_alignParentBottom="true"
        android:scaleType="fitStart"
        android:src="@drawable/downmosaique" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:paddingHorizontal="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/helveticabold"
            android:text="@string/welcome"
            android:textColor="@color/black"
            android:textSize="35sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="40dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/french_btn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="15dp"
                android:layout_weight="0.5"
                android:background="@drawable/selector_orange_btn_background"
                android:fontFamily="@font/helveticamedium"
                android:text="@string/french"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <Button
                android:id="@+id/arabic_btn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:layout_weight="0.5"
                android:background="@drawable/selector_grey_border_btn_background"
                android:fontFamily="@font/helveticamedium"
                android:text="@string/arabic"
                android:textAllCaps="false"
                android:textColor="@drawable/selector_btn_text_color"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>