<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fillViewport="true"
    android:filterTouchesWhenObscured="true"
    tools:context=".views.authentication.fragments.LoginFragment">

    <RelativeLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/background"
            android:layout_width="240dp"
            android:layout_height="150dp"
            android:layout_alignParentEnd="true"
            android:scaleType="fitStart"
            android:src="@drawable/mosi" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="20dp"
            android:fontFamily="@font/helveticabold"
            android:text="@string/authentication"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <LinearLayout
            android:id="@+id/body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/background"
            android:orientation="vertical"
            android:paddingHorizontal="10dp">

            <RelativeLayout
                android:id="@+id/error_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/red"
                android:paddingStart="10dp"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/error_icon"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_centerVertical="true"
                    android:src="@drawable/error" />

                <TextView
                    android:id="@+id/error_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginHorizontal="10dp"
                    android:layout_toStartOf="@id/close_btn"
                    android:layout_toEndOf="@+id/error_icon"
                    android:fontFamily="@font/helveticamedium"
                    android:paddingVertical="@dimen/_10sdp"
                    android:textColor="@color/white"
                    android:textSize="13sp"
                    tools:text="RC / Patente ou mot de passe incorrect" />

                <RelativeLayout
                    android:id="@+id/close_btn"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:padding="@dimen/_7sdp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:scaleType="centerInside"
                        android:src="@drawable/delete" />
                </RelativeLayout>

            </RelativeLayout>

            <EditText
                android:id="@+id/id"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_25sdp"
                android:autofillHints=""
                android:background="@drawable/edittext_underline"
                android:fontFamily="@font/helveticalight"
                android:hint="@string/id_hint"
                android:inputType="text"
                android:paddingLeft="0dp"
                android:paddingRight="0dp"
                android:textAlignment="viewStart"
                android:textColor="@color/black"
                android:textColorHint="@color/grey"
                android:textSize="16sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center_vertical">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_25sdp"
                    android:autofillHints=""
                    android:background="@drawable/edittext_underline"
                    android:fontFamily="@font/helveticalight"
                    android:hint="@string/password_hint"
                    android:inputType="textPassword"
                    android:paddingLeft="0dp"
                    android:paddingRight="0dp"
                    android:textAlignment="viewStart"
                    android:textColor="@color/black"
                    android:textColorHint="@color/grey"
                    android:textSize="16sp" />

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/show_password_btn"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/selector_password_button"
                    android:button="@null" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/save_btn"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/selector_custom_checkbox"
                    android:button="@null" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/helveticamedium"
                    android:text="@string/stay_connected"
                    android:textColor="@color/black"
                    android:textSize="15sp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/footer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/body"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="10dp"
            android:gravity="bottom"
            android:orientation="vertical"
            android:paddingHorizontal="10dp"
            android:paddingVertical="20dp">

            <Button
                android:id="@+id/valid_btn"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/selector_orange_btn_background"
                android:enabled="false"
                android:fontFamily="@font/helveticamedium"
                android:text="@string/connect_btn"
                android:textAllCaps="false"
                android:textColor="@drawable/selector_text_color"
                android:textSize="17sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginTop="15dp"
                android:background="@color/grey" />

            <TextView
                android:id="@+id/signin_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/helveticalight"
                android:paddingVertical="15dp"
                android:text="@string/signin"
                android:textColor="@drawable/selector_button_text_color"
                android:textSize="18sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/grey" />

            <TextView
                android:id="@+id/visitor_mode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/helveticalight"
                android:paddingVertical="15dp"
                android:text="@string/visitor_mode"
                android:textColor="@drawable/selector_button_text_color"
                android:textSize="18sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/grey" />

            <TextView
                android:id="@+id/forgotten_pwd_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:fontFamily="@font/helveticalight"
                android:paddingVertical="15dp"
                android:text="@string/forgotten_password"
                android:textColor="@drawable/selector_button_text_color"
                android:textSize="18sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/grey" />

            <TextView
                android:id="@+id/gest_account_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:fontFamily="@font/helveticalight"
                android:paddingVertical="15dp"
                android:text="@string/change_account_manager"
                android:textColor="@drawable/selector_button_text_color"
                android:textSize="18sp" />

        </LinearLayout>

        <pl.droidsonroids.gif.GifImageView
            android:id="@+id/loader"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_centerInParent="true"
            android:scaleType="fitXY"
            android:src="@mipmap/loader"
            android:visibility="gone" />
    </RelativeLayout>
</ScrollView>
